--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>개발자 이상철 포트 폴리오</title>
+        <title>프론트엔드 이상철 - 포트폴리오</title>
+        <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     </head>
     <body>
         <div id="root"></div>
