포트폴리오용 프로젝트 추가작업

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,26 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>프론트엔드 이상철 - 포트폴리오</title>
+
+        <!-- SEO Meta Tags -->
+        <meta name="description" content="프론트엔드 개발자 이상철의 포트폴리오입니다. React, JavaScript, HTML/CSS를 활용한 프로젝트를 확인하세요." />
+        <meta name="keywords" content="프론트엔드, 개발자, 포트폴리오, React, JavaScript, 이상철" />
+        <meta name="author" content="이상철" />
+
+        <!-- Open Graph Meta Tags (Facebook, LinkedIn) -->
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="프론트엔드 이상철 - 포트폴리오" />
+        <meta property="og:description" content="프론트엔드 개발자 이상철의 포트폴리오입니다. React, JavaScript, HTML/CSS를 활용한 프로젝트를 확인하세요." />
+        <meta property="og:image" content="https://lsch.co.kr/Portfolio.png" />
+        <meta property="og:url" content="https://lsch.co.kr/" />
+        <meta property="og:site_name" content="이상철 포트폴리오" />
+
+        <!-- Twitter Card Meta Tags -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="프론트엔드 이상철 - 포트폴리오" />
+        <meta name="twitter:description" content="프론트엔드 개발자 이상철의 포트폴리오입니다. React, JavaScript, HTML/CSS를 활용한 프로젝트를 확인하세요." />
+        <meta name="twitter:image" content="https://lsch.co.kr/Portfolio.png" />
+
         <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     </head>
     <body>
